--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,6 +4,6 @@ import astropodConfig from "../../.astropod/astropod.config.json";
 import { Content as AboutContent } from "../content/web/about.md";
 ---
 
-<EpisodeLayout title={"About - " + astropodConfig.name} description={astropodConfig.description} cover={astropodConfig.cover}>
+<EpisodeLayout title="About" description={astropodConfig.description} cover={astropodConfig.cover}>
   <AboutContent />
 </EpisodeLayout>
