fixing banner style

--- a/src/components/headerCard/HeaderCard.astro
+++ b/src/components/headerCard/HeaderCard.astro
@@ -13,8 +13,12 @@ let cover_url = cover ? cover : astropodConfig.cover;
 
 <div class="card min-w-full bg-base-100 shadow-md md:pb-3">
   <div class="aspect-[3/1] mt-5 md:min-w-[720px]">
-    <div class="relative inline-block">
-      <img src={astropodConfig.banner} alt={astropodConfig.name + "banner"} class="w-full h-auto" />
+    <div class="relative inline-block w-full">
+      <img
+        src={astropodConfig.banner}
+        alt={astropodConfig.name + " banner"}
+        class="object-cover  w-full aspect-[3/1]"
+      />
       <div
         class="absolute top-0 left-0 items-center justify-center w-full h-full bg-gradient-to-t from-gray-900 to-50% to-transparent"
       >
