banner fullwith style

--- a/src/components/headerCard/HeaderCard.astro
+++ b/src/components/headerCard/HeaderCard.astro
@@ -11,8 +11,8 @@ const explicitLabel = explicit === undefined ? astropodConfig.explicit : explici
 let cover_url = cover ? cover : astropodConfig.cover;
 ---
 
-<div class="card min-w-full bg-base-100 shadow-md md:pb-3">
-  <div class="aspect-[3/1] mt-5 md:min-w-[720px]">
+<div class="card min-w-full bg-base-100 shadow-md md:pb-3 w-full">
+  <div class="aspect-[3/1] mt-5 w-full">
     <div class="relative inline-block w-full">
       <img
         src={astropodConfig.banner}
