--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,8 +15,8 @@ const { image, title = astropodConfig.name, description = astropodConfig.descrip
   </head>
   <body class="bg-base-200 min-h-screen">
     <div class="container mx-auto lg:max-w-[960px]">
-      <div class="md:flex md:justify-center">
-        <main class="-mt-5">
+      <div class="md:flex md:justify-center w-full">
+        <main class="-mt-5 w-full">
           <slot />
         </main>
       </div>
