--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -40,7 +40,7 @@ const displayDuration = formatTime(duration);
     <a href={url} class="min-w-fit">
       <img src={cover_url} alt={title} class="shadow-lg rounded-md w-20 h-20 md:w-24 md:h-24" />
     </a>
-    <div class="grow w-full">
+    <div class="grow w-full overflow-auto">
       <a href={url}>
         <h2 class="md:text-xl text-lg font-semibold truncate">
           {title}
