--- a/src/components/headerCard/followUsMenu.astro
+++ b/src/components/headerCard/followUsMenu.astro
@@ -23,7 +23,7 @@ for (const key in social) {
 ---
 {hasSocial && (
 <div class="dropdown dropdown-hover dropdown-end">
-  <label tabindex="0" class="btn btn-ghost m-1">
+  <label tabindex="0" class="btn btn-ghost m-1 px-2 sm:px-4">
     <ExternalLinkIcon />
     <span class="hidden md:inline-block">Follow us</span>
   </label>
