--- a/src/components/headerCard/listenOnMenu.astro
+++ b/src/components/headerCard/listenOnMenu.astro
@@ -23,7 +23,7 @@ for (const key in listenOn) {
 
 {hasListenOn && (
   <div class="dropdown dropdown-hover dropdown-end">
-    <label tabindex="0" class="btn btn-ghost m-1">
+    <label tabindex="0" class="btn btn-ghost m-1 px-2 sm:px-4">
       <HeadphoneIcon />
       <span class="hidden md:inline-block">Listen on</span>
     </label>
