--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -38,14 +38,14 @@ const displayDuration = formatTime(duration);
 <div class="episode-card">
   <div class="hero-content flex-row">
     <a href={url} class="min-w-fit">
-      <img src={cover_url} alt={title} class="shadow-lg rounded-md w-20 h-20 md:w-24 md:h-24" />
+      <img src={cover_url} alt={title} class="shadow-lg rounded-md w-[4.5rem] h-[4.5rem] md:w-24 md:h-24" />
     </a>
     <div class="grow w-full overflow-auto">
       <a href={url}>
-        <h2 class="md:text-xl text-lg font-semibold truncate">
+        <h2 class="md:text-xl text-sm font-semibold truncate">
           {title}
         </h2>
-        <p class="text-sm font-medium opacity-60">
+        <p class="text-xs font-medium opacity-60">
           {displayDuration && displayDuration + " • "}
           {displayDate}
         </p>
