fixing loading audio spinner on mobile

--- a/src/components/audioPlayer.astro
+++ b/src/components/audioPlayer.astro
@@ -11,7 +11,7 @@ import AudioMutedIcon from "./icons/audioMutedIcon.astro";
   class="w-full z-20 bottom-0 fixed bg-base-100 px-5 h-16 items-center transition-opacity hidden opacity-0 duration-500"
 >
   <audio src="" preload="metadata"></audio>
-  <span id="audio-loading" class="loading loading-spinner loading-md hidden"></span>
+  <span id="audio-loading" class="loading loading-spinner loading-md min-w-[1.5rem] hidden"></span>
   <label id="audio-control" class="swap hidden">
     <input type="checkbox" id="play-icon" />
     <div id="play-icon-svg" class="swap-off">
