improving footer padding

--- a/src/pages/episode/[slug].astro
+++ b/src/pages/episode/[slug].astro
@@ -45,7 +45,7 @@ const musicPlayer = document.getElementById("audio-player-container");
 const audioDownloadLink = document.getElementById("audio-download-link");
 const audioControl = document.getElementById("audio-control");
 const audioLoading = document.getElementById("audio-loading");
-const footer = document.querySelector(".footer");
+const footer = document.querySelector(".footer > div");
 
 musicPlayer?.classList.remove("hidden", "opacity-0");
 musicPlayer?.classList.add("flex");
