improving audio duration format

--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -11,25 +11,19 @@ import PauseIcon from "./icons/pauseIcon.astro";
 let cover_url = cover ? cover : astropodConfig.cover;
 const displayDate = dayjs(pubDate).format("ll");
 
-function formatTime(seconds) {
-  if (isNaN(seconds) || seconds < 0) {
-    const segmentedTime = seconds.split(":");
-    return segmentedTime[0] == "00" || segmentedTime[0] == "0" ? seconds : null;
+function formatTime(secs) {
+  if (isNaN(secs) || secs < 0) {
+    const segmentedTime = secs.split(":");
+    return segmentedTime[0] == "00" || segmentedTime[0] == "0" ? secs : null;
   }
 
-  const hours = Math.floor(seconds / 3600);
-  const minutes = Math.floor((seconds % 3600) / 60);
-  const remainingSeconds = seconds % 60;
-
-  const formattedHours = hours < 10 ? `0${hours}` : hours;
+  const hours = Math.floor(secs / 3600);
+  const minutes = Math.floor((secs % 3600) / 60);
+  const seconds = Math.floor(secs % 60);
   const formattedMinutes = minutes < 10 ? `0${minutes}` : minutes;
-  const formattedSeconds = remainingSeconds < 10 ? `0${remainingSeconds}` : remainingSeconds;
+  const formattedseconds = seconds < 10 ? `0${seconds}` : seconds;
 
-  if (hours > 0) {
-    return `${formattedHours}:${formattedMinutes}:${formattedSeconds}`;
-  } else {
-    return `${formattedMinutes}:${formattedSeconds}`;
-  }
+  return hours > 0 ? `${hours}:${formattedMinutes}:${formattedseconds}` : `${minutes}:${formattedseconds}`;
 }
 
 const displayDuration = formatTime(duration);
