--- a/src/components/headerCard/followUsMenu.astro
+++ b/src/components/headerCard/followUsMenu.astro
@@ -25,7 +25,7 @@ for (const key in social) {
 <div class="dropdown dropdown-hover dropdown-end">
   <label tabindex="0" class="btn btn-ghost m-1 px-2 sm:px-4">
     <ExternalLinkIcon />
-    <span class="hidden md:inline-block">Follow us</span>
+    <span class="hidden md:inline-block">Follow</span>
   </label>
   <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
     {social.instagram && (<li><a href={social.instagram}><InstagramIcon />Instagram</a></li>)}
