--- a/src/components/headerCard/HeaderCard.astro
+++ b/src/components/headerCard/HeaderCard.astro
@@ -1,6 +1,6 @@
 ---
 import astropodConfig from "../../../.astropod/astropod.config.json";
-const { title, subtitle, explicit, cover } = Astro.props;
+const { title, subtitle, explicit, cover, hideSmallCover = false  } = Astro.props;
 
 import ListenOnMenu from "./listenOnMenu.astro";
 import FollowUsMenu from "./followUsMenu.astro";
@@ -9,12 +9,15 @@ import HeartIcon from "../icons/heartIcon.astro";
 
 const explicitLabel = explicit === undefined ? astropodConfig.explicit : explicit;
 let cover_url = cover ? cover : astropodConfig.cover;
+let banner_url = hideSmallCover? cover_url : astropodConfig.banner;
+
 ---
+
 
 <div class="card min-w-full bg-base-100 shadow-md md:pb-3 w-full">
   <div class="aspect-[3/1] mt-5 w-full">
     <div class="relative inline-block w-full">
-      <img src={astropodConfig.banner} alt={astropodConfig.name + " banner"} class="object-cover w-full aspect-[3/1]" />
+      <img src={banner_url} alt={astropodConfig.name + " banner"} class="object-cover w-full aspect-[3/1]" />
       <div
         class="absolute top-0 left-0 items-center justify-center w-full h-full bg-gradient-to-t from-gray-900 to-50% to-transparent"
       >
@@ -32,15 +35,17 @@ let cover_url = cover ? cover : astropodConfig.cover;
       }
     </div>
     <img
-      alt={astropodConfig.name + "cover"}
-      class="-mt-28 mx-6 md:-mt-28 border-4 z-10 relative border-base-100 rounded-lg md:mx-11 w-24 h-24 md:h-40 md:w-40"
-      src={cover_url}
-    />
+        alt={astropodConfig.name + "cover"}
+        class="-mt-28 mx-6 md:-mt-28 border-4 z-10 relative border-base-100 rounded-lg md:mx-11 w-24 h-24 md:h-40 md:w-40"
+        src={cover_url}
+      />
+    
   </div>
 
   <div class="flex md:-mt-12 px-4 md:pl-52">
     <a href="/" class="btn btn-ghost m-1 justify-self-start px-2 sm:px-4"> Home</a>
     <a href="/about" class="btn btn-ghost m-1 justify-self-end px-2 sm:px-4"> About</a>
+    <a href="/bookshelf" class="btn btn-ghost m-1 justify-self-end px-2 sm:px-4"> BookShelf</a>
 
     <div class="grow"></div>
 
