--- a/src/layouts/EpisodeLayout.astro
+++ b/src/layouts/EpisodeLayout.astro
@@ -5,13 +5,13 @@ import localizedFormat from "dayjs/plugin/localizedFormat";
 import HeaderCard from "../components/headerCard/HeaderCard.astro";
 import astropodConfig from "../../.astropod/astropod.config.json";
 
-const { title, explicit, pubDate, cover, description } = Astro.props;
+const { title, explicit, pubDate, cover, description, hideSmallCover = false } = Astro.props;
 dayjs.extend(localizedFormat);
 const displayDate = dayjs(pubDate).format("ll");
 ---
 
 <BaseLayout title={`${title} - ${astropodConfig.name}`} description={description} image={cover}>
-  <HeaderCard title={title} subtitle={astropodConfig.name} cover={cover} explicit={explicit} />
+  <HeaderCard hideSmallCover={hideSmallCover} title={title} subtitle={astropodConfig.name} cover={cover} explicit={explicit} />
 
   <main class="md:flex md:justify-center">
     <article class="card prose min-w-full prose-img:mx-auto bg-base-100 shadow-md p-8 mt-12">
