--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,6 +3,6 @@ import EpisodeLayout from "../layouts/EpisodeLayout.astro";
 import astropodConfig from "../../.astropod/astropod.config.json";
 ---
 
-<EpisodeLayout title="About" description={astropodConfig.description} cover={astropodConfig.cover}>
+<EpisodeLayout title="About" description={astropodConfig.description} cover="../guests/aaron.jpg">
   {astropodConfig.description}
 </EpisodeLayout>
