fix time not showing

--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -39,7 +39,7 @@ const displayDuration = formatTime(duration);
         <h2 class="md:text-xl text-sm font-semibold truncate">
           {title}
         </h2>
-        <p class="text-xs font-medium opacity-60">
+        <p class="text-xs font-medium opacity-60 text-blue-500">
           {displayDuration && displayDuration + " • "}
           {displayDate}
         </p>
