Fix bookshelf cover image

--- a/src/pages/bookshelf.astro
+++ b/src/pages/bookshelf.astro
@@ -52,7 +52,7 @@ const books = [
 
 ---
 
-<EpisodeLayout hideSmallCover={true} title="Bookshelf" description={astropodConfig.description} cover="bookshelf.png">
+<EpisodeLayout hideSmallCover={true} title="Bookshelf" description={astropodConfig.description} cover="../bookshelf.png">
     Welcome to the TLD Bookshelf. In each episode we ask our guests to recommend a book and here they all are for you to purchase and read.
     <div class="grid grid-cols-5 gap-2">
         { 
