--- a/src/components/headerCard/HeaderCard.astro
+++ b/src/components/headerCard/HeaderCard.astro
@@ -17,7 +17,7 @@ let cover_url = cover ? cover : defaultCoverImage;
 <div class="card min-w-full bg-base-100 shadow-md md:pb-3 w-full">
   <div class="aspect-[3/1] mt-5 w-full">
     <div class="relative inline-block w-full">
-      <Image src={bannerImage} alt={astropodConfig.name + " banner"} class="object-cover w-full aspect-[3/1]" />
+      <Image src={bannerImage} alt={astropodConfig.name + " banner"} class="object-cover w-full aspect-[3/1]" /fetchpriority="high">
       <div
         class="absolute top-0 left-0 items-center justify-center w-full h-full bg-gradient-to-t from-gray-900 to-50% to-transparent"
       >
@@ -34,7 +34,7 @@ let cover_url = cover ? cover : defaultCoverImage;
         )
       }
     </div>
-    <Image src={cover_url} alt={astropodConfig.name + "cover"} class="-mt-28 mx-6 md:-mt-28 border-4 z-10 relative border-base-100 rounded-lg md:mx-11 w-24 h-24 md:h-40 md:w-40" />
+    <Image src={cover_url} alt={astropodConfig.name + "cover"} class="-mt-28 mx-6 md:-mt-28 border-4 z-10 relative border-base-100 rounded-lg md:mx-11 w-24 h-24 md:h-40 md:w-40" format="webp"/>
   </div>
 
   <div class="flex md:-mt-12 px-4 md:pl-52">
