--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -7,6 +7,7 @@ export interface Props {
   image?: string;
 }
 
+import { ViewTransitions } from "astro:transitions";
 import astropodConfig from "../../.astropod/astropod.config.json";
 const { title, description, image } = Astro.props;
 
@@ -37,3 +38,5 @@ const display_image = image ? image : astropodConfig.cover;
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(display_image, astropodConfig.link)} />
+
+<ViewTransitions />
