--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -34,7 +34,7 @@ const displayDuration = formatTime(duration);
 <div class="episode-card">
   <div class="hero-content flex-row">
     <a href={url} class="min-w-fit">
-      <Image src={cover_url} alt={title} class="shadow-lg rounded-md w-[4.5rem] h-[4.5rem] md:w-24 md:h-24" format="webp"/>
+      <Image src={cover_url} alt={title} class="shadow-lg rounded-md w-[4.5rem] h-[4.5rem] md:w-24 md:h-24" format="webp" transition:name="cover_img" width={96} height={96}/>
     </a>
     <div class="grow w-full overflow-auto">
       <a href={url}>
