feat: Config and use import aliasses

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -8,7 +8,7 @@ export interface Props {
 }
 
 import { ViewTransitions } from "astro:transitions";
-import astropodConfig from "../../.astropod/astropod.config.json";
+import astropodConfig from "@configs/astropod.config.json";
 const { title, description, image } = Astro.props;
 
 const display_image = image ? image : astropodConfig.cover;
