--- a/src/components/audioPlayer.astro
+++ b/src/components/audioPlayer.astro
@@ -1,9 +1,9 @@
 ---
-import DownloadIcon from "./icons/downloadIcon.astro";
-import PlayIcon from "./icons/playIcon.astro";
-import PauseIcon from "./icons/pauseIcon.astro";
-import AudioIcon from "./icons/audioIcon.astro";
-import AudioMutedIcon from "./icons/audioMutedIcon.astro";
+import DownloadIcon from "@icons/downloadIcon.astro";
+import PlayIcon from "@icons/playIcon.astro";
+import PauseIcon from "@icons/pauseIcon.astro";
+import AudioIcon from "@icons/audioIcon.astro";
+import AudioMutedIcon from "@icons/audioMutedIcon.astro";
 ---
 
 <div
