--- a/src/components/headerCard/followUsMenu.astro
+++ b/src/components/headerCard/followUsMenu.astro
@@ -1,16 +1,14 @@
 ---
-import social from "../../../.astropod/social.config.json";
-import TwitterIcon from "../icons/twitterIcon.astro";
-import YoutubeIcon from "../icons/youtubeIcon.astro";
-import TelegramIcon from "../icons/telegramIcon.astro";
-import FacebookIcon from "../icons/facebookIcon.astro";
-import InstagramIcon from "../icons/instagramIcon.astro";
-import NewsletterIcon from "../icons/newsletterIcon.astro";
-import LinkedinIcon from "../icons/linkedinIcon.astro";
-import GithubIcon from "../icons/githubIcon.astro";
-
-
-import ExternalLinkIcon from "../icons/externalLinkIcon.astro";
+import social from "@configs/social.config.json";
+import TwitterIcon from "@icons/twitterIcon.astro";
+import YoutubeIcon from "@icons/youtubeIcon.astro";
+import TelegramIcon from "@icons/telegramIcon.astro";
+import FacebookIcon from "@icons/facebookIcon.astro";
+import InstagramIcon from "@icons/instagramIcon.astro";
+import NewsletterIcon from "@icons/newsletterIcon.astro";
+import LinkedinIcon from "@icons/linkedinIcon.astro";
+import GithubIcon from "@icons/githubIcon.astro";
+import ExternalLinkIcon from "@icons/externalLinkIcon.astro";
 
 let hasSocial = false 
 
