--- a/src/components/headerCard/listenOnMenu.astro
+++ b/src/components/headerCard/listenOnMenu.astro
@@ -1,16 +1,16 @@
 ---
-import listenOn from "../../../.astropod/listenOn.config.json";
-import GooglePodcastIcon from "../icons/googlePodcastIcon.astro";
-import SpotifyIcon from "../icons/spotifyIcon.astro";
-import ApplePodcastIcon from "../icons/applePodcastIcon.astro";
-import HeadphoneIcon from "../icons/headphoneIcon.astro";
-import PocketcastsIcon from "../icons/pocketcastsIcon.astro";
-import IvooxIcon from "../icons/ivooxIcon.astro";
-import AmazonMusicIcon from "../icons/amazonMusicIcon.astro";
-import FountainIcon from "../icons/fountainIcon.astro";
-import DeezerIcon from "../icons/deezerIcon.astro";
-import EasyPodcastIcon from "../icons/easyPodcastIcon.astro";
-import AcastPodcastsIcon from "../icons/acastPodcastsIcon.astro";
+import listenOn from "@configs/listenOn.config.json";
+import GooglePodcastIcon from "@icons/googlePodcastIcon.astro";
+import SpotifyIcon from "@icons/spotifyIcon.astro";
+import ApplePodcastIcon from "@icons/applePodcastIcon.astro";
+import HeadphoneIcon from "@icons/headphoneIcon.astro";
+import PocketcastsIcon from "@icons/pocketcastsIcon.astro";
+import IvooxIcon from "@icons/ivooxIcon.astro";
+import AmazonMusicIcon from "@icons/amazonMusicIcon.astro";
+import FountainIcon from "@icons/fountainIcon.astro";
+import DeezerIcon from "@icons/deezerIcon.astro";
+import EasyPodcastIcon from "@icons/easyPodcastIcon.astro";
+import AcastPodcastsIcon from "@icons/acastPodcastsIcon.astro";
 
 let hasListenOn = false 
 
