--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -1,13 +1,13 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-import HorizontalCard from "../components/HorizontalCard.astro";
+import BaseLayout from "@layouts/BaseLayout.astro";
+import HorizontalCard from "@components/HorizontalCard.astro";
 import { getCollection } from "astro:content";
-import astropodConfig from "../../.astropod/astropod.config.json";
-import HeaderCard from "../components/headerCard/HeaderCard.astro";
-import AudioPlayer from "../components/audioPlayer.astro";
+import astropodConfig from "@configs/astropod.config.json";
+import HeaderCard from "@components/headerCard/HeaderCard.astro";
+import AudioPlayer from "@components/audioPlayer.astro";
 import PlainTextRenderer from "marked-plaintext";
 import { marked } from "marked";
-import Pagination from "../components/pagination.astro";
+import Pagination from "@components/pagination.astro";
 
 const renderer = new PlainTextRenderer();
 
