--- a/src/pages/bookshelf.astro
+++ b/src/pages/bookshelf.astro
@@ -6,47 +6,56 @@ const books = [
     {
         title: "Breath: The New Science of a Lost Art by James Nester",
         image: "../books/breathe.jpg",
-        url: "https://amzn.to/3YZvnOk"
+        url: "https://amzn.to/3YZvnOk",
+        episode: 1
     },
     {
         title: "Quiet: The Power of Introverts in a World That Can't Stop Talking by Susan Cain",
         image: "../books/quiet.jpg",
-        url: "https://amzn.to/3YXQQXO"
+        url: "https://amzn.to/3YXQQXO",
+        episode: 1
     },
     {
         title: "Educated: A Memoir by Tara Westover",
         image: "../books/educated.jpg",
-        url: "https://amzn.to/3YZe0wZ"
+        url: "https://amzn.to/3YZe0wZ",
+        episode: 2
     },
     {
         title: "Atomic Habits: An Easy & Proven Way to Build Good Habits & Break Bad Ones by James Clear",
         image: "../books/atomic.jpg",
-        url: "https://amzn.to/3Elwpe1"
+        url: "https://amzn.to/3Elwpe1",
+        episode: 2
     },
     {
         title: "Engineering Management for the Rest of Us by Sarah Dresner",
         image: "../books/management.jpg",
-        url: "https://amzn.to/45vtYSf"
+        url: "https://amzn.to/45vtYSf",
+        episode: 3
     },
     {
         title: "Full Catastrophe Living, Revised Edition: How to cope with stress, pain and illness using mindfulness meditation by Jon Kabat-Zinn",
         image: "../books/catastrophe.jpg",
-        url: "https://amzn.to/3R39DyY"
+        url: "https://amzn.to/3R39DyY",
+        episode: 3
     },
     {
         title: "Nonviolent Communication -- A Language of Life: Life-Changing Tools for Healthy Relationships (Nonviolent Communication Guides) by Marshall B. Rosenberg",
         image: "../books/nonviolent.jpg",
-        url: "https://amzn.to/3L6t326"
+        url: "https://amzn.to/3L6t326",
+        episode: 4
     },
     {
         title: "Lean In: Women, Work, and the Will to Lead by Sheryl Sandberg",
         image: "../books/leanin.jpg",
-        url: "https://amzn.to/3qSgIIf"
+        url: "https://amzn.to/3qSgIIf",
+        episode: 5
     },
     {
         title: "Never Split the Difference: Negotiating as if Your Life Depended on It by Chris Voss and Tahl Raz",
         image: "../books/neversplit.jpg",
-        url: "https://amzn.to/45Dzm5F"
+        url: "https://amzn.to/45Dzm5F",
+        episode: 5
     }
 ]
 
@@ -56,7 +65,9 @@ const books = [
     Welcome to the TLD Bookshelf. In each episode we ask our guests to recommend a book and here they all are for you to purchase and read.
     <div class="grid grid-cols-5 gap-2">
         { 
-            books.map((book, index) => (
+            books
+            .sort((a,b) => b.episode - a.episode)
+            .map((book, index) => (
                 <a href={book.url} target="_blank">
                     <img class="hover:-skew-x-1" src={book.image} alt={book.title} />
                 </a>    
