Added new episode

--- a/src/pages/bookshelf.astro
+++ b/src/pages/bookshelf.astro
@@ -56,6 +56,42 @@ const books = [
         image: "../books/neversplit.jpg",
         url: "https://amzn.to/45Dzm5F",
         episode: 5
+    },
+    {
+        title: "Shoe Dog: A Memoir by the Creator of NIKE",
+        image: "../books/shoe.jpg",
+        url: "https://amzn.to/3ZpCLTe",
+        episode: 6
+    },
+    {
+        title: "Steve Jobs: The Exclusive Biography by Isaacson, Walter",
+        image: "../books/steve.jpg",
+        url: "https://amzn.to/3Rtbz48",
+        episode: 6
+    },
+    {
+        title: "Trust in Alfa: 7 Simple Rules for Success",
+        image: "../books/alfie.jpg",
+        url: "https://amzn.to/3LyXgr4",
+        episode: 6
+    },
+    {
+        title: "Think And Grow Rich",
+        image: "../books/think.jpg",
+        url: "https://amzn.to/3RCErXA",
+        episode: 6
+    },
+    {
+        title: "The 7 Habits Of Highly Effective People: Revised and Updated: 30th Anniversary Edition",
+        image: "../books/seven.jpg",
+        url: "https://amzn.to/3PJ00EF",
+        episode: 6
+    },
+    {
+        title: "Ready player one ",
+        image: "../books/player.jpg",
+        url: "https://amzn.to/3PMA9eV",
+        episode: 6
     }
 ]
 
